# VaultKeep

./: .env  .gitignore  chunk.md  main.py  pyproject.toml  test.md  test_cars.md  vaultkeep.db
api/: lifespan.py
api/models/: auth.py
api/routes/: __init__.py  auth.py  core.py  files.py  users.py
api/services/: file_service.py
config/: settings.py
db/: database.py  models.py  repository.py
utils/: auth.py  embeddings.py  files.py
