[project]
name = "vaultkeep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
